// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshots TwoFactorAuth chooseMethod 1`] = `
<span>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      style={
        Object {
          "marginRight": "1rem",
        }
      }
    >
      <span
        style={
          Object {
            "color": "#323b43",
            "fontFamily": "\\"Roboto\\", sans-serif",
            "fontSize": "1rem",
            "fontWeight": 400,
          }
        }
      >
        Two Factor Authentication
      </span>
      <div
        style={
          Object {
            "marginTop": "0.5rem",
            "maxWidth": "700px",
          }
        }
      >
        <span
          style={
            Object {
              "color": "#59626a",
              "fontFamily": "\\"Roboto\\", sans-serif",
              "fontSize": "0.9rem",
              "fontWeight": 400,
            }
          }
        >
          Two factor authentication adds an extra layer of security for your Buffer account. Whenever you log in to your account, after entering your username and password, you will be asked for a second authentication code that was sent to your mobile phone via text or a free mobile app. 
          <a
            href="#"
            onBlur={[Function]}
            onClick={undefined}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={
              Object {
                "color": "#168eea",
                "fontFamily": "\\"Roboto\\", sans-serif",
                "padding": "0",
              }
            }
            target="_self"
          >
            Learn more
          </a>
        </span>
        <div
          style={
            Object {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "column",
              "height": "100vh",
              "justifyContent": "center",
              "left": 0,
              "position": "absolute",
              "top": 0,
              "width": "100vw",
            }
          }
        >
          <div
            style={
              Object {
                "bottom": undefined,
                "left": undefined,
                "position": "absolute",
                "right": undefined,
                "top": undefined,
                "zIndex": 3000,
              }
            }
          >
            <div
              style={
                Object {
                  "width": "500px",
                }
              }
            >
              <div
                onMouseEnter={undefined}
                onMouseLeave={undefined}
                style={
                  Object {
                    "backgroundColor": "#fff",
                    "border": "0.063rem solid #e6ebef",
                    "borderRadius": "0.126rem",
                    "boxShadow": "0 1px 4px rgba(50, 59, 67, 0.8)",
                    "color": "#323b43",
                    "fontSize": "0.9rem",
                    "lineHeight": 1.5,
                    "padding": "1.5rem",
                    "transition": "box-shadow 0.2s linear",
                  }
                }
              >
                <div
                  style={
                    Object {
                      "margin": "16px 40px",
                    }
                  }
                >
                  <div
                    style={
                      Object {
                        "display": "block",
                      }
                    }
                  >
                    <div
                      style={
                        Object {
                          "textAlign": "center",
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#59626a",
                            "fontFamily": "\\"Roboto\\", sans-serif",
                            "fontSize": "1.25rem",
                            "fontWeight": 400,
                          }
                        }
                      >
                        Enable Two Factor Authentication
                      </span>
                      <div
                        style={
                          Object {
                            "margin": "12px 0",
                          }
                        }
                      >
                        <span
                          style={
                            Object {
                              "color": "#59626a",
                              "fontFamily": "\\"Roboto\\", sans-serif",
                              "fontSize": "0.9rem",
                              "fontWeight": 500,
                            }
                          }
                        >
                          How would you like us to send your security codes?
                        </span>
                      </div>
                    </div>
                    <div
                      style={
                        Object {
                          "display": "flex",
                        }
                      }
                    >
                      <div
                        style={
                          Object {
                            "flex": 1,
                            "padding": "8px",
                          }
                        }
                      >
                        <button
                          aria-label={null}
                          disabled={undefined}
                          onBlur={[Function]}
                          onClick={[Function]}
                          onFocus={[Function]}
                          onMouseEnter={[Function]}
                          onMouseLeave={[Function]}
                          style={
                            Object {
                              "backgroundColor": "transparent",
                              "border": "0.063rem solid transparent",
                              "borderColor": "#168eea",
                              "borderRadius": "2rem",
                              "color": "#168eea",
                              "cursor": "pointer",
                              "display": "inline-block",
                              "fontFamily": "\\"Roboto\\", sans-serif",
                              "fontSize": "0.75rem",
                              "fontWeight": 400,
                              "margin": "0",
                              "outline": "none",
                              "padding": "0.5rem 2rem",
                              "transition": "background-color 0.2s linear",
                              "width": "100%",
                            }
                          }
                        >
                          Text Message
                        </button>
                      </div>
                      <div
                        style={
                          Object {
                            "flex": 1,
                            "padding": "8px",
                          }
                        }
                      >
                        <button
                          aria-label={null}
                          disabled={undefined}
                          onBlur={[Function]}
                          onClick={[Function]}
                          onFocus={[Function]}
                          onMouseEnter={[Function]}
                          onMouseLeave={[Function]}
                          style={
                            Object {
                              "backgroundColor": "transparent",
                              "border": "0.063rem solid transparent",
                              "borderColor": "#168eea",
                              "borderRadius": "2rem",
                              "color": "#168eea",
                              "cursor": "pointer",
                              "display": "inline-block",
                              "fontFamily": "\\"Roboto\\", sans-serif",
                              "fontSize": "0.75rem",
                              "fontWeight": 400,
                              "margin": "0",
                              "outline": "none",
                              "padding": "0.5rem 2rem",
                              "transition": "background-color 0.2s linear",
                              "width": "100%",
                            }
                          }
                        >
                          Authenticator App
                        </button>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "rgba(50, 59, 67, 0.8)",
                "bottom": 0,
                "left": 0,
                "opacity": 1,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "zIndex": 2000,
              }
            }
          />
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "paddingRight": "0.5rem",
        }
      }
    >
      <button
        aria-label={null}
        disabled={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "background": "none",
            "backgroundColor": "unset",
            "border": "none",
            "borderRadius": "unset",
            "color": "unset",
            "cursor": "pointer",
            "display": "unset",
            "fontFamily": "unset",
            "fontSize": "unset",
            "fontWeight": "unset",
            "lineHeight": "unset",
            "margin": "unset",
            "outline": "none",
            "padding": 0,
            "transition": "unset",
          }
        }
      >
        <div
          style={
            Object {
              "display": "flex",
              "opacity": 0.5,
            }
          }
        >
          <span
            style={
              Object {
                "color": "#59626a",
                "fontFamily": "\\"Roboto\\", sans-serif",
                "fontSize": "1rem",
                "fontWeight": 400,
              }
            }
          >
            Disabled
          </span>
          <div
            style={
              Object {
                "height": "1rem",
                "marginLeft": "0.5rem",
                "position": "relative",
                "width": "2rem",
              }
            }
          >
            <div
              style={
                Object {
                  "background": "#fcfcfc",
                  "border": "0.063rem solid rgba(50, 59, 67, 0.3)",
                  "borderRadius": "2rem",
                  "bottom": 0,
                  "left": 1,
                  "position": "absolute",
                  "right": 0,
                  "top": 1,
                  "transition": "background 0.2s linear, border 0.2s linear",
                }
              }
            />
            <div
              style={
                Object {
                  "background": "#fcfcfc",
                  "border": "0.063rem solid rgba(50, 59, 67, 0.3)",
                  "borderRadius": "50%",
                  "height": "1rem",
                  "left": "0%",
                  "position": "absolute",
                  "top": 0,
                  "transition": "left 0.2s linear, border 0.2s linear",
                  "width": "1rem",
                }
              }
            />
          </div>
        </div>
      </button>
    </div>
  </div>
</span>
`;

exports[`Snapshots TwoFactorAuth confirm 1`] = `
<span>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      style={
        Object {
          "marginRight": "1rem",
        }
      }
    >
      <span
        style={
          Object {
            "color": "#323b43",
            "fontFamily": "\\"Roboto\\", sans-serif",
            "fontSize": "1rem",
            "fontWeight": 400,
          }
        }
      >
        Two Factor Authentication
      </span>
      <div
        style={
          Object {
            "marginTop": "0.5rem",
            "maxWidth": "700px",
          }
        }
      >
        <span
          style={
            Object {
              "color": "#59626a",
              "fontFamily": "\\"Roboto\\", sans-serif",
              "fontSize": "0.9rem",
              "fontWeight": 400,
            }
          }
        >
          Two factor authentication adds an extra layer of security for your Buffer account. Whenever you log in to your account, after entering your username and password, you will be asked for a second authentication code that was sent to your mobile phone via text or a free mobile app. 
          <a
            href="#"
            onBlur={[Function]}
            onClick={undefined}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={
              Object {
                "color": "#168eea",
                "fontFamily": "\\"Roboto\\", sans-serif",
                "padding": "0",
              }
            }
            target="_self"
          >
            Learn more
          </a>
        </span>
        <div
          style={
            Object {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "column",
              "height": "100vh",
              "justifyContent": "center",
              "left": 0,
              "position": "absolute",
              "top": 0,
              "width": "100vw",
            }
          }
        >
          <div
            style={
              Object {
                "bottom": undefined,
                "left": undefined,
                "position": "absolute",
                "right": undefined,
                "top": undefined,
                "zIndex": 3000,
              }
            }
          >
            <div
              style={
                Object {
                  "width": "500px",
                }
              }
            >
              <div
                onMouseEnter={undefined}
                onMouseLeave={undefined}
                style={
                  Object {
                    "backgroundColor": "#fff",
                    "border": "0.063rem solid #e6ebef",
                    "borderRadius": "0.126rem",
                    "boxShadow": "0 1px 4px rgba(50, 59, 67, 0.8)",
                    "color": "#323b43",
                    "fontSize": "0.9rem",
                    "lineHeight": 1.5,
                    "padding": "1.5rem",
                    "transition": "box-shadow 0.2s linear",
                  }
                }
              >
                <div
                  style={
                    Object {
                      "margin": "16px 40px",
                    }
                  }
                >
                  <div
                    style={
                      Object {
                        "textAlign": "center",
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#59626a",
                          "fontFamily": "\\"Roboto\\", sans-serif",
                          "fontSize": "1.25rem",
                          "fontWeight": 400,
                        }
                      }
                    >
                      Enter confirmation code
                    </span>
                    <div
                      style={
                        Object {
                          "margin": "12px 0 8px",
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#59626a",
                            "fontFamily": "\\"Roboto\\", sans-serif",
                            "fontSize": "0.9rem",
                            "fontWeight": 500,
                          }
                        }
                      >
                        Awesome! Now we just need to confirm everything.
                         
                      </span>
                      <span
                        style={
                          Object {
                            "color": "#59626a",
                            "fontFamily": "\\"Roboto\\", sans-serif",
                            "fontSize": "0.9rem",
                            "fontWeight": 400,
                          }
                        }
                      >
                        Please input the code that we just texted you.
                      </span>
                    </div>
                  </div>
                  <div
                    style={
                      Object {
                        "padding": "0 0 24px",
                      }
                    }
                  >
                    <div
                      style={
                        Object {
                          "paddingBottom": "4px",
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#59626a",
                            "fontFamily": "\\"Roboto\\", sans-serif",
                            "fontSize": "0.9rem",
                            "fontWeight": 500,
                          }
                        }
                      >
                        Code
                      </span>
                    </div>
                    <div>
                      <input
                        disabled={false}
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        placeholder={undefined}
                        style={
                          Object {
                            "border": "0.063rem solid #ced7df",
                            "borderColor": "#ced7df",
                            "borderRadius": "0.126rem",
                            "boxSizing": "border-box",
                            "fontFamily": "\\"Roboto\\", sans-serif",
                            "fontSize": "1rem",
                            "outline": 0,
                            "padding": "0.5rem",
                            "width": "100%",
                          }
                        }
                        type="text"
                        value=""
                      />
                    </div>
                  </div>
                  <div
                    style={
                      Object {
                        "paddingTop": "8px",
                        "textAlign": "center",
                      }
                    }
                  >
                    <div
                      style={
                        Object {
                          "display": "inline",
                          "paddingRight": "20px",
                        }
                      }
                    >
                      <button
                        aria-label={null}
                        disabled={undefined}
                        onBlur={[Function]}
                        onClick={[Function]}
                        onFocus={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        style={
                          Object {
                            "backgroundColor": "transparent",
                            "border": "0.063rem solid transparent",
                            "borderColor": "#ced7df",
                            "borderRadius": "2rem",
                            "color": "#323b43",
                            "cursor": "pointer",
                            "display": "inline-block",
                            "fontFamily": "\\"Roboto\\", sans-serif",
                            "fontSize": "0.75rem",
                            "fontWeight": 400,
                            "margin": "0",
                            "outline": "none",
                            "padding": "0.5rem 2rem",
                            "transition": "background-color 0.2s linear",
                          }
                        }
                      >
                        Back
                      </button>
                    </div>
                    <button
                      aria-label={null}
                      disabled={false}
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      style={
                        Object {
                          "backgroundColor": "#168eea",
                          "border": "0.063rem solid transparent",
                          "borderRadius": "2rem",
                          "color": "#fff",
                          "cursor": "pointer",
                          "display": "inline-block",
                          "fontFamily": "\\"Roboto\\", sans-serif",
                          "fontSize": "0.75rem",
                          "fontWeight": 400,
                          "margin": "0",
                          "outline": "none",
                          "padding": "0.5rem 2rem",
                          "transition": "background-color 0.2s linear",
                        }
                      }
                    >
                      Next
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "rgba(50, 59, 67, 0.8)",
                "bottom": 0,
                "left": 0,
                "opacity": 1,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "zIndex": 2000,
              }
            }
          />
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "paddingRight": "0.5rem",
        }
      }
    >
      <button
        aria-label={null}
        disabled={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "background": "none",
            "backgroundColor": "unset",
            "border": "none",
            "borderRadius": "unset",
            "color": "unset",
            "cursor": "pointer",
            "display": "unset",
            "fontFamily": "unset",
            "fontSize": "unset",
            "fontWeight": "unset",
            "lineHeight": "unset",
            "margin": "unset",
            "outline": "none",
            "padding": 0,
            "transition": "unset",
          }
        }
      >
        <div
          style={
            Object {
              "display": "flex",
              "opacity": 0.5,
            }
          }
        >
          <span
            style={
              Object {
                "color": "#59626a",
                "fontFamily": "\\"Roboto\\", sans-serif",
                "fontSize": "1rem",
                "fontWeight": 400,
              }
            }
          >
            Disabled
          </span>
          <div
            style={
              Object {
                "height": "1rem",
                "marginLeft": "0.5rem",
                "position": "relative",
                "width": "2rem",
              }
            }
          >
            <div
              style={
                Object {
                  "background": "#fcfcfc",
                  "border": "0.063rem solid rgba(50, 59, 67, 0.3)",
                  "borderRadius": "2rem",
                  "bottom": 0,
                  "left": 1,
                  "position": "absolute",
                  "right": 0,
                  "top": 1,
                  "transition": "background 0.2s linear, border 0.2s linear",
                }
              }
            />
            <div
              style={
                Object {
                  "background": "#fcfcfc",
                  "border": "0.063rem solid rgba(50, 59, 67, 0.3)",
                  "borderRadius": "50%",
                  "height": "1rem",
                  "left": "0%",
                  "position": "absolute",
                  "top": 0,
                  "transition": "left 0.2s linear, border 0.2s linear",
                  "width": "1rem",
                }
              }
            />
          </div>
        </div>
      </button>
    </div>
  </div>
</span>
`;

exports[`Snapshots TwoFactorAuth disabled 1`] = `
<span>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      style={
        Object {
          "marginRight": "1rem",
        }
      }
    >
      <span
        style={
          Object {
            "color": "#323b43",
            "fontFamily": "\\"Roboto\\", sans-serif",
            "fontSize": "1rem",
            "fontWeight": 400,
          }
        }
      >
        Two Factor Authentication
      </span>
      <div
        style={
          Object {
            "marginTop": "0.5rem",
            "maxWidth": "700px",
          }
        }
      >
        <span
          style={
            Object {
              "color": "#59626a",
              "fontFamily": "\\"Roboto\\", sans-serif",
              "fontSize": "0.9rem",
              "fontWeight": 400,
            }
          }
        >
          Two factor authentication adds an extra layer of security for your Buffer account. Whenever you log in to your account, after entering your username and password, you will be asked for a second authentication code that was sent to your mobile phone via text or a free mobile app. 
          <a
            href="#"
            onBlur={[Function]}
            onClick={undefined}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={
              Object {
                "color": "#168eea",
                "fontFamily": "\\"Roboto\\", sans-serif",
                "padding": "0",
              }
            }
            target="_self"
          >
            Learn more
          </a>
        </span>
      </div>
    </div>
    <div
      style={
        Object {
          "paddingRight": "0.5rem",
        }
      }
    >
      <button
        aria-label={null}
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "background": "none",
            "backgroundColor": "unset",
            "border": "none",
            "borderRadius": "unset",
            "color": "unset",
            "cursor": "pointer",
            "display": "unset",
            "fontFamily": "unset",
            "fontSize": "unset",
            "fontWeight": "unset",
            "lineHeight": "unset",
            "margin": "unset",
            "outline": "none",
            "padding": 0,
            "transition": "unset",
          }
        }
      >
        <div
          style={
            Object {
              "display": "flex",
              "opacity": undefined,
            }
          }
        >
          <span
            style={
              Object {
                "color": "#59626a",
                "fontFamily": "\\"Roboto\\", sans-serif",
                "fontSize": "1rem",
                "fontWeight": 400,
              }
            }
          >
            Disabled
          </span>
          <div
            style={
              Object {
                "height": "1rem",
                "marginLeft": "0.5rem",
                "position": "relative",
                "width": "2rem",
              }
            }
          >
            <div
              style={
                Object {
                  "background": "#fcfcfc",
                  "border": "0.063rem solid rgba(50, 59, 67, 0.3)",
                  "borderRadius": "2rem",
                  "bottom": 0,
                  "left": 1,
                  "position": "absolute",
                  "right": 0,
                  "top": 1,
                  "transition": "background 0.2s linear, border 0.2s linear",
                }
              }
            />
            <div
              style={
                Object {
                  "background": "#fcfcfc",
                  "border": "0.063rem solid rgba(50, 59, 67, 0.3)",
                  "borderRadius": "50%",
                  "height": "1rem",
                  "left": "0%",
                  "position": "absolute",
                  "top": 0,
                  "transition": "left 0.2s linear, border 0.2s linear",
                  "width": "1rem",
                }
              }
            />
          </div>
        </div>
      </button>
    </div>
  </div>
</span>
`;

exports[`Snapshots TwoFactorAuth enabled 1`] = `
<span>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      style={
        Object {
          "marginRight": "1rem",
        }
      }
    >
      <span
        style={
          Object {
            "color": "#323b43",
            "fontFamily": "\\"Roboto\\", sans-serif",
            "fontSize": "1rem",
            "fontWeight": 400,
          }
        }
      >
        Two Factor Authentication
      </span>
      <div
        style={
          Object {
            "marginTop": "0.5rem",
            "maxWidth": "700px",
          }
        }
      >
        <span
          style={
            Object {
              "color": "#59626a",
              "fontFamily": "\\"Roboto\\", sans-serif",
              "fontSize": "0.9rem",
              "fontWeight": 400,
            }
          }
        >
          Enabled!
        </span>
      </div>
    </div>
    <div
      style={
        Object {
          "paddingRight": "0.5rem",
        }
      }
    >
      <button
        aria-label={null}
        disabled={false}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "background": "none",
            "backgroundColor": "unset",
            "border": "none",
            "borderRadius": "unset",
            "color": "unset",
            "cursor": "pointer",
            "display": "unset",
            "fontFamily": "unset",
            "fontSize": "unset",
            "fontWeight": "unset",
            "lineHeight": "unset",
            "margin": "unset",
            "outline": "none",
            "padding": 0,
            "transition": "unset",
          }
        }
      >
        <div
          style={
            Object {
              "display": "flex",
              "opacity": undefined,
            }
          }
        >
          <span
            style={
              Object {
                "color": "#59626a",
                "fontFamily": "\\"Roboto\\", sans-serif",
                "fontSize": "1rem",
                "fontWeight": 400,
              }
            }
          >
            Enabled
          </span>
          <div
            style={
              Object {
                "height": "1rem",
                "marginLeft": "0.5rem",
                "position": "relative",
                "width": "2rem",
              }
            }
          >
            <div
              style={
                Object {
                  "background": "#168eea",
                  "border": "0.063rem solid #168eea",
                  "borderRadius": "2rem",
                  "bottom": 0,
                  "left": 1,
                  "position": "absolute",
                  "right": 0,
                  "top": 1,
                  "transition": "background 0.2s linear, border 0.2s linear",
                }
              }
            />
            <div
              style={
                Object {
                  "background": "#fcfcfc",
                  "border": "0.063rem solid #168eea",
                  "borderRadius": "50%",
                  "height": "1rem",
                  "left": "calc(100% - 1rem)",
                  "position": "absolute",
                  "top": 0,
                  "transition": "left 0.2s linear, border 0.2s linear",
                  "width": "1rem",
                }
              }
            />
          </div>
        </div>
      </button>
    </div>
  </div>
</span>
`;

exports[`Snapshots TwoFactorAuth recovery 1`] = `
<span>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      style={
        Object {
          "marginRight": "1rem",
        }
      }
    >
      <span
        style={
          Object {
            "color": "#323b43",
            "fontFamily": "\\"Roboto\\", sans-serif",
            "fontSize": "1rem",
            "fontWeight": 400,
          }
        }
      >
        Two Factor Authentication
      </span>
      <div
        style={
          Object {
            "marginTop": "0.5rem",
            "maxWidth": "700px",
          }
        }
      >
        <span
          style={
            Object {
              "color": "#59626a",
              "fontFamily": "\\"Roboto\\", sans-serif",
              "fontSize": "0.9rem",
              "fontWeight": 400,
            }
          }
        >
          Two factor authentication adds an extra layer of security for your Buffer account. Whenever you log in to your account, after entering your username and password, you will be asked for a second authentication code that was sent to your mobile phone via text or a free mobile app. 
          <a
            href="#"
            onBlur={[Function]}
            onClick={undefined}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={
              Object {
                "color": "#168eea",
                "fontFamily": "\\"Roboto\\", sans-serif",
                "padding": "0",
              }
            }
            target="_self"
          >
            Learn more
          </a>
        </span>
        <div
          style={
            Object {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "column",
              "height": "100vh",
              "justifyContent": "center",
              "left": 0,
              "position": "absolute",
              "top": 0,
              "width": "100vw",
            }
          }
        >
          <div
            style={
              Object {
                "bottom": undefined,
                "left": undefined,
                "position": "absolute",
                "right": undefined,
                "top": undefined,
                "zIndex": 3000,
              }
            }
          >
            <div
              style={
                Object {
                  "width": "500px",
                }
              }
            >
              <div
                onMouseEnter={undefined}
                onMouseLeave={undefined}
                style={
                  Object {
                    "backgroundColor": "#fff",
                    "border": "0.063rem solid #e6ebef",
                    "borderRadius": "0.126rem",
                    "boxShadow": "0 1px 4px rgba(50, 59, 67, 0.8)",
                    "color": "#323b43",
                    "fontSize": "0.9rem",
                    "lineHeight": 1.5,
                    "padding": "1.5rem",
                    "transition": "box-shadow 0.2s linear",
                  }
                }
              >
                <div
                  style={
                    Object {
                      "margin": "16px 40px",
                    }
                  }
                >
                  <div
                    style={
                      Object {
                        "textAlign": "center",
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#59626a",
                          "fontFamily": "\\"Roboto\\", sans-serif",
                          "fontSize": "1.25rem",
                          "fontWeight": 400,
                        }
                      }
                    >
                      Save this one-time recovery code
                    </span>
                    <div
                      style={
                        Object {
                          "margin": "12px 0 20px",
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#59626a",
                            "fontFamily": "\\"Roboto\\", sans-serif",
                            "fontSize": "0.9rem",
                            "fontWeight": 400,
                          }
                        }
                      >
                        With Two Factor Authentication, if you lose your phone there's a possibility you could get locked out of your account. Save this code in a safe place to use if you can't log in with your phone.
                      </span>
                    </div>
                  </div>
                  <button
                    aria-label={null}
                    disabled={undefined}
                    onBlur={[Function]}
                    onClick={[Function]}
                    onFocus={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                    style={
                      Object {
                        "background": "none",
                        "backgroundColor": "unset",
                        "border": "none",
                        "borderRadius": "unset",
                        "color": "unset",
                        "cursor": "pointer",
                        "display": "unset",
                        "fontFamily": "unset",
                        "fontSize": "unset",
                        "fontWeight": "unset",
                        "lineHeight": "unset",
                        "margin": "unset",
                        "outline": "none",
                        "padding": 0,
                        "transition": "unset",
                        "width": "100%",
                      }
                    }
                  >
                    <div
                      onMouseEnter={undefined}
                      onMouseLeave={undefined}
                      style={
                        Object {
                          "backgroundColor": "#fcfcfc",
                          "border": "0.063rem solid #e6ebef",
                          "borderRadius": "0.126rem",
                          "color": "#323b43",
                          "fontSize": "0.9rem",
                          "lineHeight": 1.5,
                          "padding": 0,
                          "transition": "box-shadow 0.2s linear",
                        }
                      }
                    >
                      <div
                        style={
                          Object {
                            "padding": "1rem",
                          }
                        }
                      >
                        <code
                          style={
                            Object {
                              "fontSize": "16px",
                              "fontWeight": "bold",
                              "userSelect": "all",
                            }
                          }
                        >
                          ABCD-EFG-HIJK-LKM
                        </code>
                      </div>
                    </div>
                  </button>
                  <div
                    style={
                      Object {
                        "marginTop": "16px",
                        "textAlign": "center",
                      }
                    }
                  >
                    <button
                      aria-label={null}
                      disabled={undefined}
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      style={
                        Object {
                          "backgroundColor": "#168eea",
                          "border": "0.063rem solid transparent",
                          "borderRadius": "2rem",
                          "color": "#fff",
                          "cursor": "pointer",
                          "display": "inline-block",
                          "fontFamily": "\\"Roboto\\", sans-serif",
                          "fontSize": "0.75rem",
                          "fontWeight": 400,
                          "margin": "0",
                          "outline": "none",
                          "padding": "0.5rem 2rem",
                          "transition": "background-color 0.2s linear",
                        }
                      }
                    >
                      Done
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "rgba(50, 59, 67, 0.8)",
                "bottom": 0,
                "left": 0,
                "opacity": 1,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "zIndex": 2000,
              }
            }
          />
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "paddingRight": "0.5rem",
        }
      }
    >
      <button
        aria-label={null}
        disabled={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "background": "none",
            "backgroundColor": "unset",
            "border": "none",
            "borderRadius": "unset",
            "color": "unset",
            "cursor": "pointer",
            "display": "unset",
            "fontFamily": "unset",
            "fontSize": "unset",
            "fontWeight": "unset",
            "lineHeight": "unset",
            "margin": "unset",
            "outline": "none",
            "padding": 0,
            "transition": "unset",
          }
        }
      >
        <div
          style={
            Object {
              "display": "flex",
              "opacity": 0.5,
            }
          }
        >
          <span
            style={
              Object {
                "color": "#59626a",
                "fontFamily": "\\"Roboto\\", sans-serif",
                "fontSize": "1rem",
                "fontWeight": 400,
              }
            }
          >
            Disabled
          </span>
          <div
            style={
              Object {
                "height": "1rem",
                "marginLeft": "0.5rem",
                "position": "relative",
                "width": "2rem",
              }
            }
          >
            <div
              style={
                Object {
                  "background": "#fcfcfc",
                  "border": "0.063rem solid rgba(50, 59, 67, 0.3)",
                  "borderRadius": "2rem",
                  "bottom": 0,
                  "left": 1,
                  "position": "absolute",
                  "right": 0,
                  "top": 1,
                  "transition": "background 0.2s linear, border 0.2s linear",
                }
              }
            />
            <div
              style={
                Object {
                  "background": "#fcfcfc",
                  "border": "0.063rem solid rgba(50, 59, 67, 0.3)",
                  "borderRadius": "50%",
                  "height": "1rem",
                  "left": "0%",
                  "position": "absolute",
                  "top": 0,
                  "transition": "left 0.2s linear, border 0.2s linear",
                  "width": "1rem",
                }
              }
            />
          </div>
        </div>
      </button>
    </div>
  </div>
</span>
`;

exports[`Snapshots TwoFactorAuth setupApp 1`] = `
<span>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      style={
        Object {
          "marginRight": "1rem",
        }
      }
    >
      <span
        style={
          Object {
            "color": "#323b43",
            "fontFamily": "\\"Roboto\\", sans-serif",
            "fontSize": "1rem",
            "fontWeight": 400,
          }
        }
      >
        Two Factor Authentication
      </span>
      <div
        style={
          Object {
            "marginTop": "0.5rem",
            "maxWidth": "700px",
          }
        }
      >
        <span
          style={
            Object {
              "color": "#59626a",
              "fontFamily": "\\"Roboto\\", sans-serif",
              "fontSize": "0.9rem",
              "fontWeight": 400,
            }
          }
        >
          Two factor authentication adds an extra layer of security for your Buffer account. Whenever you log in to your account, after entering your username and password, you will be asked for a second authentication code that was sent to your mobile phone via text or a free mobile app. 
          <a
            href="#"
            onBlur={[Function]}
            onClick={undefined}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={
              Object {
                "color": "#168eea",
                "fontFamily": "\\"Roboto\\", sans-serif",
                "padding": "0",
              }
            }
            target="_self"
          >
            Learn more
          </a>
        </span>
        <div
          style={
            Object {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "column",
              "height": "100vh",
              "justifyContent": "center",
              "left": 0,
              "position": "absolute",
              "top": 0,
              "width": "100vw",
            }
          }
        >
          <div
            style={
              Object {
                "bottom": undefined,
                "left": undefined,
                "position": "absolute",
                "right": undefined,
                "top": undefined,
                "zIndex": 3000,
              }
            }
          >
            <div
              style={
                Object {
                  "width": "500px",
                }
              }
            >
              <div
                onMouseEnter={undefined}
                onMouseLeave={undefined}
                style={
                  Object {
                    "backgroundColor": "#fff",
                    "border": "0.063rem solid #e6ebef",
                    "borderRadius": "0.126rem",
                    "boxShadow": "0 1px 4px rgba(50, 59, 67, 0.8)",
                    "color": "#323b43",
                    "fontSize": "0.9rem",
                    "lineHeight": 1.5,
                    "padding": "1.5rem",
                    "transition": "box-shadow 0.2s linear",
                  }
                }
              >
                <div
                  style={
                    Object {
                      "margin": "16px 40px",
                    }
                  }
                >
                  <div
                    style={
                      Object {
                        "textAlign": "center",
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#59626a",
                          "fontFamily": "\\"Roboto\\", sans-serif",
                          "fontSize": "1.25rem",
                          "fontWeight": 400,
                        }
                      }
                    >
                      Set up your authenticator app
                    </span>
                    <div
                      style={
                        Object {
                          "margin": "12px 0",
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#59626a",
                            "fontFamily": "\\"Roboto\\", sans-serif",
                            "fontSize": "0.9rem",
                            "fontWeight": 500,
                          }
                        }
                      >
                        Scan the QR code below in your authenticator app and you're all set!
                         
                      </span>
                      <span
                        style={
                          Object {
                            "color": "#59626a",
                            "fontFamily": "\\"Roboto\\", sans-serif",
                            "fontSize": "0.9rem",
                            "fontWeight": 400,
                          }
                        }
                      >
                        (If you have not installed an authenticator app yet,
                         
                        <a
                          href="https://faq.buffer.com/article/443-what-is-2-step-login"
                          onBlur={[Function]}
                          onClick={undefined}
                          onFocus={[Function]}
                          onMouseEnter={[Function]}
                          onMouseLeave={[Function]}
                          style={
                            Object {
                              "color": "#168eea",
                              "fontFamily": "\\"Roboto\\", sans-serif",
                              "padding": "0",
                            }
                          }
                          target="_blank"
                        >
                          read here for more information.
                        </a>
                        )
                      </span>
                    </div>
                  </div>
                  <div
                    style={
                      Object {
                        "textAlign": "center",
                      }
                    }
                  >
                    <img
                      alt="QR Code"
                      src="data:image/png;base64,dasd"
                      style={
                        Object {
                          "height": "200px",
                          "imageRendering": "pixelated",
                          "width": "200px",
                        }
                      }
                    />
                  </div>
                  <div
                    style={
                      Object {
                        "paddingTop": "8px",
                        "textAlign": "center",
                      }
                    }
                  >
                    <div
                      style={
                        Object {
                          "display": "inline",
                          "paddingRight": "20px",
                        }
                      }
                    >
                      <button
                        aria-label={null}
                        disabled={undefined}
                        onBlur={[Function]}
                        onClick={[Function]}
                        onFocus={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        style={
                          Object {
                            "backgroundColor": "transparent",
                            "border": "0.063rem solid transparent",
                            "borderColor": "#ced7df",
                            "borderRadius": "2rem",
                            "color": "#323b43",
                            "cursor": "pointer",
                            "display": "inline-block",
                            "fontFamily": "\\"Roboto\\", sans-serif",
                            "fontSize": "0.75rem",
                            "fontWeight": 400,
                            "margin": "0",
                            "outline": "none",
                            "padding": "0.5rem 2rem",
                            "transition": "background-color 0.2s linear",
                          }
                        }
                      >
                        Back
                      </button>
                    </div>
                    <button
                      aria-label={null}
                      disabled={undefined}
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      style={
                        Object {
                          "backgroundColor": "#168eea",
                          "border": "0.063rem solid transparent",
                          "borderRadius": "2rem",
                          "color": "#fff",
                          "cursor": "pointer",
                          "display": "inline-block",
                          "fontFamily": "\\"Roboto\\", sans-serif",
                          "fontSize": "0.75rem",
                          "fontWeight": 400,
                          "margin": "0",
                          "outline": "none",
                          "padding": "0.5rem 2rem",
                          "transition": "background-color 0.2s linear",
                        }
                      }
                    >
                      Next
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "rgba(50, 59, 67, 0.8)",
                "bottom": 0,
                "left": 0,
                "opacity": 1,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "zIndex": 2000,
              }
            }
          />
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "paddingRight": "0.5rem",
        }
      }
    >
      <button
        aria-label={null}
        disabled={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "background": "none",
            "backgroundColor": "unset",
            "border": "none",
            "borderRadius": "unset",
            "color": "unset",
            "cursor": "pointer",
            "display": "unset",
            "fontFamily": "unset",
            "fontSize": "unset",
            "fontWeight": "unset",
            "lineHeight": "unset",
            "margin": "unset",
            "outline": "none",
            "padding": 0,
            "transition": "unset",
          }
        }
      >
        <div
          style={
            Object {
              "display": "flex",
              "opacity": 0.5,
            }
          }
        >
          <span
            style={
              Object {
                "color": "#59626a",
                "fontFamily": "\\"Roboto\\", sans-serif",
                "fontSize": "1rem",
                "fontWeight": 400,
              }
            }
          >
            Disabled
          </span>
          <div
            style={
              Object {
                "height": "1rem",
                "marginLeft": "0.5rem",
                "position": "relative",
                "width": "2rem",
              }
            }
          >
            <div
              style={
                Object {
                  "background": "#fcfcfc",
                  "border": "0.063rem solid rgba(50, 59, 67, 0.3)",
                  "borderRadius": "2rem",
                  "bottom": 0,
                  "left": 1,
                  "position": "absolute",
                  "right": 0,
                  "top": 1,
                  "transition": "background 0.2s linear, border 0.2s linear",
                }
              }
            />
            <div
              style={
                Object {
                  "background": "#fcfcfc",
                  "border": "0.063rem solid rgba(50, 59, 67, 0.3)",
                  "borderRadius": "50%",
                  "height": "1rem",
                  "left": "0%",
                  "position": "absolute",
                  "top": 0,
                  "transition": "left 0.2s linear, border 0.2s linear",
                  "width": "1rem",
                }
              }
            />
          </div>
        </div>
      </button>
    </div>
  </div>
</span>
`;

exports[`Snapshots TwoFactorAuth setupSMS 1`] = `
<span>
  <div
    style={
      Object {
        "alignItems": "center",
        "display": "flex",
        "justifyContent": "space-between",
      }
    }
  >
    <div
      style={
        Object {
          "marginRight": "1rem",
        }
      }
    >
      <span
        style={
          Object {
            "color": "#323b43",
            "fontFamily": "\\"Roboto\\", sans-serif",
            "fontSize": "1rem",
            "fontWeight": 400,
          }
        }
      >
        Two Factor Authentication
      </span>
      <div
        style={
          Object {
            "marginTop": "0.5rem",
            "maxWidth": "700px",
          }
        }
      >
        <span
          style={
            Object {
              "color": "#59626a",
              "fontFamily": "\\"Roboto\\", sans-serif",
              "fontSize": "0.9rem",
              "fontWeight": 400,
            }
          }
        >
          Two factor authentication adds an extra layer of security for your Buffer account. Whenever you log in to your account, after entering your username and password, you will be asked for a second authentication code that was sent to your mobile phone via text or a free mobile app. 
          <a
            href="#"
            onBlur={[Function]}
            onClick={undefined}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            style={
              Object {
                "color": "#168eea",
                "fontFamily": "\\"Roboto\\", sans-serif",
                "padding": "0",
              }
            }
            target="_self"
          >
            Learn more
          </a>
        </span>
        <div
          style={
            Object {
              "alignItems": "center",
              "display": "flex",
              "flexDirection": "column",
              "height": "100vh",
              "justifyContent": "center",
              "left": 0,
              "position": "absolute",
              "top": 0,
              "width": "100vw",
            }
          }
        >
          <div
            style={
              Object {
                "bottom": undefined,
                "left": undefined,
                "position": "absolute",
                "right": undefined,
                "top": undefined,
                "zIndex": 3000,
              }
            }
          >
            <div
              style={
                Object {
                  "width": "500px",
                }
              }
            >
              <div
                onMouseEnter={undefined}
                onMouseLeave={undefined}
                style={
                  Object {
                    "backgroundColor": "#fff",
                    "border": "0.063rem solid #e6ebef",
                    "borderRadius": "0.126rem",
                    "boxShadow": "0 1px 4px rgba(50, 59, 67, 0.8)",
                    "color": "#323b43",
                    "fontSize": "0.9rem",
                    "lineHeight": 1.5,
                    "padding": "1.5rem",
                    "transition": "box-shadow 0.2s linear",
                  }
                }
              >
                <div
                  style={
                    Object {
                      "margin": "16px 40px",
                    }
                  }
                >
                  <div
                    style={
                      Object {
                        "textAlign": "center",
                      }
                    }
                  >
                    <span
                      style={
                        Object {
                          "color": "#59626a",
                          "fontFamily": "\\"Roboto\\", sans-serif",
                          "fontSize": "1.25rem",
                          "fontWeight": 400,
                        }
                      }
                    >
                      Set up your phone number
                    </span>
                    <div
                      style={
                        Object {
                          "margin": "12px 0",
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#59626a",
                            "fontFamily": "\\"Roboto\\", sans-serif",
                            "fontSize": "0.9rem",
                            "fontWeight": 500,
                          }
                        }
                      >
                        This will be the device we send verification codes each time you log into Buffer.
                      </span>
                    </div>
                  </div>
                  <div
                    style={
                      Object {
                        "padding": "16px 0 20px",
                      }
                    }
                  >
                    <div
                      style={
                        Object {
                          "paddingBottom": "4px",
                        }
                      }
                    >
                      <span
                        style={
                          Object {
                            "color": "#59626a",
                            "fontFamily": "\\"Roboto\\", sans-serif",
                            "fontSize": "0.9rem",
                            "fontWeight": 500,
                          }
                        }
                      >
                        Phone number (incl. country code)
                      </span>
                    </div>
                    <div>
                      <input
                        disabled={false}
                        onBlur={[Function]}
                        onChange={[Function]}
                        onFocus={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        placeholder="e.g., +1 123-555-1234"
                        style={
                          Object {
                            "border": "0.063rem solid #ced7df",
                            "borderColor": "#ced7df",
                            "borderRadius": "0.126rem",
                            "boxSizing": "border-box",
                            "fontFamily": "\\"Roboto\\", sans-serif",
                            "fontSize": "1rem",
                            "outline": 0,
                            "padding": "0.5rem",
                            "width": "100%",
                          }
                        }
                        type="text"
                        value="+15142345566"
                      />
                    </div>
                  </div>
                  <div
                    style={
                      Object {
                        "paddingTop": "8px",
                        "textAlign": "center",
                      }
                    }
                  >
                    <div
                      style={
                        Object {
                          "display": "inline",
                          "paddingRight": "20px",
                        }
                      }
                    >
                      <button
                        aria-label={null}
                        disabled={undefined}
                        onBlur={[Function]}
                        onClick={[Function]}
                        onFocus={[Function]}
                        onMouseEnter={[Function]}
                        onMouseLeave={[Function]}
                        style={
                          Object {
                            "backgroundColor": "transparent",
                            "border": "0.063rem solid transparent",
                            "borderColor": "#ced7df",
                            "borderRadius": "2rem",
                            "color": "#323b43",
                            "cursor": "pointer",
                            "display": "inline-block",
                            "fontFamily": "\\"Roboto\\", sans-serif",
                            "fontSize": "0.75rem",
                            "fontWeight": 400,
                            "margin": "0",
                            "outline": "none",
                            "padding": "0.5rem 2rem",
                            "transition": "background-color 0.2s linear",
                          }
                        }
                      >
                        Back
                      </button>
                    </div>
                    <button
                      aria-label={null}
                      disabled={false}
                      onBlur={[Function]}
                      onClick={[Function]}
                      onFocus={[Function]}
                      onMouseEnter={[Function]}
                      onMouseLeave={[Function]}
                      style={
                        Object {
                          "backgroundColor": "#168eea",
                          "border": "0.063rem solid transparent",
                          "borderRadius": "2rem",
                          "color": "#fff",
                          "cursor": "pointer",
                          "display": "inline-block",
                          "fontFamily": "\\"Roboto\\", sans-serif",
                          "fontSize": "0.75rem",
                          "fontWeight": 400,
                          "margin": "0",
                          "outline": "none",
                          "padding": "0.5rem 2rem",
                          "transition": "background-color 0.2s linear",
                        }
                      }
                    >
                      Next
                    </button>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            onClick={[Function]}
            style={
              Object {
                "backgroundColor": "rgba(50, 59, 67, 0.8)",
                "bottom": 0,
                "left": 0,
                "opacity": 1,
                "position": "absolute",
                "right": 0,
                "top": 0,
                "zIndex": 2000,
              }
            }
          />
        </div>
      </div>
    </div>
    <div
      style={
        Object {
          "paddingRight": "0.5rem",
        }
      }
    >
      <button
        aria-label={null}
        disabled={true}
        onBlur={[Function]}
        onClick={[Function]}
        onFocus={[Function]}
        onMouseEnter={[Function]}
        onMouseLeave={[Function]}
        style={
          Object {
            "background": "none",
            "backgroundColor": "unset",
            "border": "none",
            "borderRadius": "unset",
            "color": "unset",
            "cursor": "pointer",
            "display": "unset",
            "fontFamily": "unset",
            "fontSize": "unset",
            "fontWeight": "unset",
            "lineHeight": "unset",
            "margin": "unset",
            "outline": "none",
            "padding": 0,
            "transition": "unset",
          }
        }
      >
        <div
          style={
            Object {
              "display": "flex",
              "opacity": 0.5,
            }
          }
        >
          <span
            style={
              Object {
                "color": "#59626a",
                "fontFamily": "\\"Roboto\\", sans-serif",
                "fontSize": "1rem",
                "fontWeight": 400,
              }
            }
          >
            Disabled
          </span>
          <div
            style={
              Object {
                "height": "1rem",
                "marginLeft": "0.5rem",
                "position": "relative",
                "width": "2rem",
              }
            }
          >
            <div
              style={
                Object {
                  "background": "#fcfcfc",
                  "border": "0.063rem solid rgba(50, 59, 67, 0.3)",
                  "borderRadius": "2rem",
                  "bottom": 0,
                  "left": 1,
                  "position": "absolute",
                  "right": 0,
                  "top": 1,
                  "transition": "background 0.2s linear, border 0.2s linear",
                }
              }
            />
            <div
              style={
                Object {
                  "background": "#fcfcfc",
                  "border": "0.063rem solid rgba(50, 59, 67, 0.3)",
                  "borderRadius": "50%",
                  "height": "1rem",
                  "left": "0%",
                  "position": "absolute",
                  "top": 0,
                  "transition": "left 0.2s linear, border 0.2s linear",
                  "width": "1rem",
                }
              }
            />
          </div>
        </div>
      </button>
    </div>
  </div>
</span>
`;
